# suffixes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: bounds.rs  castfrom.rs  castit.rs  lib.rs  trunit.rs  wrap.rs
src/test/: boundary.rs  exhaustive.rs  f32panic.rs  f64panic.rs  oracle.rs  simpletests.rs
